2010-05-16  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (LIBX_BASE): Always define.

	* Makefile.in (LIBX_OTHER): Move out of cpp section.

	* Makefile.in (LIBXT): Always define.

2010-05-15  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (OLDXMENU, LIBXMENU, LIBX_OTHER): Always define.

	* Makefile.in (FONT_DRIVERS): Remove, replace with $FONT_OBJ.
	(obj, SOME_MACHINE_OBJECTS): Use $FONT_OBJ.

2010-05-15  Ken Raeburn  <raeburn@raeburn.org>

	* lisp.h (XFLOAT_DATA): Use "0?x:x" to generate an
	rvalue. (bug#5916)
	(LISP_MAKE_RVALUE) [!USE_LISP_UNION_TYPE && !__GNUC__]: Likewise.

	* emacs.c (main): Initialize initial-environment and
	process-environment before generating from env, not after.

	Handle --version reasonably in CANNOT_DUMP configuration.
	* emacs.c (emacs_version, emacs_copyright): New string variables.
	(Vemacs_version, Vemacs_copyright): New Lisp_Object variables.
	(syms_of_emacs): Defvar them, and initialize them from the C
	string variables.
	(main): If initialization hasn't been done, print initial version
	info from the C strings, instead of starting an interactive session.

2010-05-15  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_paragraph_init): Don't leave alone garbage values
	of bidi_it->paragraph_dir.  Call bidi_initialize if needed.
	(bidi_paragraph_init): Remove redundant assertion that we are at
	the beginning of a line after call to bidi_find_paragraph_start.

	* xdisp.c (Fcurrent_bidi_paragraph_direction): New function.
	(syms_of_xdisp): Defsubr it.

	* Makefile.in: Fix MSDOS-related comments.

2010-05-15  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (OLDXMENU_TARGET): New, set by configure.
	(really-lwlib, really-oldXMenu): Always define.
	($OLDXMENU): Depend on $OLDXMENU_TARGET.

	* Makefile.in: Simplify cpp conditional.

	* Makefile.in (${ns_appdir}): Simplify using umask.

	* Makefile.in (${ns_appdir}): Remove references to CVS-related files.

2010-05-14  Stefan Monnier  <monnier@iro.umontreal.ca>
